// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notifications-flyout/Notification renders correctly with the featured prop 1`] = `
<div
  className="hig__notification-v1"
  role="listitem"
  style={
    Object {
      "height": "",
    }
  }
>
  <div
    className="hig__notification-v1__content hig__notification-v1__content--featured"
  >
    <div
      className="hig__notification-v1__content-text"
    >
      <div
        className="hig__rich-text hig__rich-text--small"
      >
        <div>
          <p>
            <b>
              Your subscription expires May 5
            </b>
          </p>
          <p>
            Maya
            <br />
            Media & Entertainment Collection
            <br />
            Product Design Collection
            <br />
            2 more
          </p>
        </div>
      </div>
      <div
        className="hig__notification-v1__dismiss-button"
      >
        <button
          className="hig__icon-button hig__icon-button--transparent"
          onBlur={undefined}
          onClick={[Function]}
          onFocus={undefined}
          onMouseEnter={undefined}
          onMouseLeave={undefined}
          title="Dismiss featured notification"
        >
          <span
            className="hig__icon-button__icon"
          >
            <div
              className="hig__icon hig__icon--24-size"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 16 16\\" role=\\"img\\" title=\\"close-notification-24\\"><polygon points=\\"11.4,5.4 10.6,4.6 8,7.3 5.4,4.6 4.6,5.4 7.3,8 4.6,10.6 5.4,11.4 8,8.7 10.6,11.4 11.4,10.6 8.7,8\\"/></svg>",
                }
              }
            />
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`notifications-flyout/Notification renders correctly with the unread prop 1`] = `
<div
  className="hig__notification-v1"
  role="listitem"
  style={
    Object {
      "height": "",
    }
  }
>
  <div
    className="hig__notification-v1__content hig__notification-v1__content--unread"
  >
    <div
      className="hig__notification-v1__content-text"
    >
      <div
        className="hig__rich-text hig__rich-text--small"
      >
        <div>
          <p>
            <b>
              Your subscription expires May 5
            </b>
          </p>
          <p>
            Maya
            <br />
            Media & Entertainment Collection
            <br />
            Product Design Collection
            <br />
            2 more
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
